Fixed homepage text getting cut off

--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ nav ul li a {
 
 #categories {
     padding-top: 2em;
-    width: 50%;
+    width: 70%;
     margin: auto;
     text-align: center;
 }
